force-app/main/default/objects/Extraction_Result__c/Extraction_Result__c.object-meta.xml
<CustomObject>
<description>Structured results from prescription-reading and intake extraction services.</description>
<label>Extraction Result</label>
<nameField>
<displayFormat>ER-{000000}</displayFormat>
<label>Extraction Result Name</label>
<type>AutoNumber</type>
</nameField>
<pluralLabel>Extraction Results</pluralLabel>
<sharingModel>ReadWrite</sharingModel>
</CustomObject>