force-app/main/default/objects/Extraction_Result__c/fields/Corrections_Count__c.field-meta.xml
<CustomField>
    <fullName>Corrections_Count__c</fullName>
    <label>Verification</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>