force-app/main/default/objects/Extraction_Result__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handwritten prescription</fullName>
            </value>
            <value>
                <fullName>Printed prescription</fullName>
            </value>
            <value>
                <fullName>Lab report</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>