force-app/main/default/objects/Extraction_Result__c/fields/Engine_Version__c.field-meta.xml
<CustomField>
    <fullName>Engine_Version__c</fullName>
    <label>Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>