force-app/main/default/objects/Extraction_Result__c/fields/Extracted_JSON__c.field-meta.xml
<CustomField>
    <fullName>Extracted_JSON__c</fullName>
    <label>Extracted JSON</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>