force-app/main/default/objects/Extraction_Result__c/fields/Extraction_Status__c.field-meta.xml
<CustomField>
<fullName>Extraction_Status__c</fullName>
<label>Extraction Status</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Pending</fullName>
<default>true</default>
<label>Pending</label>
</value>
<value>
<fullName>Processed</fullName>
</value>
<value>
<fullName>Failed</fullName>
</value>
<value>
<fullName>Requires Review</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>