force-app/main/default/objects/Extraction_Result__c/fields/Low_Confidence_Fields__c.field-meta.xml
<CustomField>
    <fullName>Low_Confidence_Fields__c</fullName>
    <label>Low-confidence Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>