force-app/main/default/objects/Extraction_Result__c/fields/Patient_Intake__c.field-meta.xml
<CustomField>
    <fullName>Patient_Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Patient_Intake__c</referenceTo>
    <relationshipLabel>Intake Records</relationshipLabel>
    <relationshipName>Patient_Intake</relationshipName>
    <type>Lookup</type>
</CustomField>