force-app/main/default/objects/Extraction_Result__c/fields/Raw_JSON__c.field-meta.xml
<CustomField>
<fullName>Raw_JSON__c</fullName>
<label>Raw JSON</label>
<type>LongTextArea</type>
<length>32768</length>
</CustomField>