force-app/main/default/objects/Extraction_Result__c/fields/Source_Document__c.field-meta.xml
<CustomField>
<fullName>Source_Document__c</fullName>
<label>Source Document</label>
<type>Text</type>
<length>180</length>
</CustomField>