force-app/main/default/objects/Extraction_Result__c/fields/Verified_At__c.field-meta.xml
<CustomField>
    <fullName>Verified_At__c</fullName>
    <label>Verification</label>
    <type>DateTime</type>
</CustomField>