force-app/main/default/objects/Extraction_Result__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verification</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Verification Records</relationshipLabel>
    <relationshipName>ExtractionResultVerifiedBy</relationshipName>
    <type>Lookup</type>
</CustomField>